# Dilla

./: .env.example  .env.local.example  .env.stripe.example  .gitignore  .vercelignore  10sept.md  2026feedback.md  6slidetofulldeck.md  AGENT_MATRIX_SYSTEM.md  ANALYST_AGENT_ARCHITECTURE.md  ANTHROPIC_FIX.md  API_WIRING_FIX_PLAN.md  ARCHITECTURE_CONSOLIDATION_SEPT3.md  BREAKPOINTS.md  CLAUDE.md  CNAME  CODE_LEVEL_FIX_PLAN.md  COMPLEX_CHART_RENDERING_COMPLETE.md  COMPREHENSIVE_FIX_COMPLETE.md  COMPREHENSIVE_FIX_PLAN.md  CULP.MD  CURRENT_SKILL_FLOW_STATUS.md  DEBUG_PLAN.md  DECK_DEBUG_ANALYSIS.md  DECK_DEBUG_OCT8.md  DENK.MD  EXTRACTION_ROOT_CAUSE_ANALYSIS.md  FEEDBACK_STATUS.md  FEEDBACK_VERIFICATION.md  FEINY6.MD  FINAL_DEBUG_PLAN.md  FINAL_FIX_STATUS.md  FINAL_STATUS_100.md  FINAL_SUMMARY.md  FIXES_COMPLETE_OCT7.md  FIXES_COMPLETE_OCT8.md  FIX_SUMMARY.md  HARDCODED_FIXES_COMPLETE.md  ILL.MD  IMPLEMENTATION_COMPLETE.md  (+182 more)
.cursor/: DEBUG_COLLECTION_GUIDE.md  INITIAL_ANALYSIS.md
api/: index.py  pwerm.py
backend/: .env.example  .gitignore  AGENT_SYSTEM_PROMPT.md  COMPLETE_DEAL_FLOW.md  COST_ANALYSIS.md  DECK_STRATEGY.md  Dockerfile  Dockerfile.prod  EXCEL_READY.md  FINAL_COMPUTATION_FLOW.md  FINANCIAL_TOOLS_READY.md  HARDCODED_VALUES.md  IPEV_VALUATION_STATUS.md  README.md  TRAINING_GUIDE.md  VERCEL_DEPLOYMENT.md  debug_streaming.py  docker-compose.lago.yml  docker-compose.prod.yml  export_deck.py  final_investment_deck.pptx  generate_deck_api.py  generate_vega_73strings_pdf.py  index.py  nginx.conf  railway.json  requirements.txt  run_grpo_training.sh  run_training.sh  (+170 more)
(+1198 files in other folders)
